test/tasty/neg/src-2/TestCompiletimeQuoteType.check
TestCompiletimeQuoteType_fail.scala:4: error: can't find type required by type parameter T in class scala.quoted.Type: scala.AnyKind; perhaps it is missing from the classpath.
  def test = CompiletimeQuoteType.f[Int]
                                   ^
1 error
